[package]
name = "tokio-uring-rustls"
version = "0.2.1"
authors = ["CTY <ctychen2216@gmail.com>"]
description = "Integrate rustls into tokio-uring"
license = "MIT"
edition = "2021"
repository = "https://github.com/cty123/tokio-uring-rustls"

[lib]
name = "tokio_uring_rustls"
path = "src/lib.rs"

[dependencies]
rustls = { version = "0.20" }
tokio-uring = { version = "0.4.0", features = ["bytes"] }
bytes = "1.2.1"

[dev-dependencies]
rustls = { version = "0.20", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.1"
tokio = { version = "1.21", features = ["full"] }
clap = { version = "4.0.19" }
