[package]
name = "tokio-uring-rustls"
version = "0.3.1"
authors = ["CTY <ctychen2216@gmail.com>"]
description = "Integrate rustls into tokio-uring"
license = "MIT"
edition = "2021"
repository = "https://github.com/cty123/tokio-uring-rustls"

[lib]
name = "tokio_uring_rustls"
path = "src/lib.rs"

[dependencies]
rustls = { version = "0.21.1" }
tokio-uring = { version = "0.4.0", features = ["bytes"] }
bytes = { version = "1" }

[dev-dependencies]
rustls = { version = "0.21.1", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.2"
tokio = { version = "1", features = ["full"] }
clap = { version = "4" }
